[project]
name = "openenv-code-debugger"
version = "0.1.0"
description = "AI Code Debugging OpenEnv"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"