[project]
name = "openenv-code-debugger"
version = "0.1.0"
description = "AI Code Debugging OpenEnv"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"